--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ __pycache__/
 # Django
 *.log
 *.sqlite3
-nokecodes/settings/local.py
-static/
+/nokecodes/settings/local.py
+/static/
 
 # Pycharm
 /.idea
